--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,118 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jep-et-bdQ">
+                                <rect key="frame" x="0.0" y="622" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="ndk-aO-LRz"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="dsr-oh-nDY"/>
+                                    <barButtonItem title="Album" id="NQI-MZ-cx2">
+                                        <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="pickAnImageFromAlbum:" destination="BYZ-38-t0r" id="1J2-dy-EVq"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="xtg-8s-GoO"/>
+                                    <barButtonItem systemItem="camera" id="P5j-Ds-PnC" userLabel="cameraButton">
+                                        <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="pickImageFromCamera:" destination="BYZ-38-t0r" id="qec-sd-ltx"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="S9Z-Wd-IKB"/>
+                                </items>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uf6-hA-yWa">
+                                <rect key="frame" x="0.0" y="64" width="375" height="558"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="iC0-ME-4PM" userLabel="textFieldTop">
+                                <rect key="frame" x="107.5" y="99" width="160" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="160" id="kTI-yL-Jd5"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="no2-2G-NOX"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ack-pC-crY" userLabel="textFieldBottom">
+                                <rect key="frame" x="107.5" y="524" width="160" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="160" id="rpc-pk-TZJ"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="viH-yH-u2B"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8da-mG-ySs">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="yIZ-aO-joM"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem id="SQ6-TD-EMN">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="VFS-sE-2Hr">
+                                            <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <connections>
+                                                <action selector="shareClicked:" destination="BYZ-38-t0r" id="CNv-Fs-4jD"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="Exg-9D-fCu">
+                                            <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <connections>
+                                                <action selector="clear:" destination="BYZ-38-t0r" id="MCR-iQ-Ck1"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="iC0-ME-4PM" firstAttribute="centerX" secondItem="F2e-1a-LtX" secondAttribute="centerX" id="4PP-ye-inq"/>
+                            <constraint firstItem="jep-et-bdQ" firstAttribute="top" secondItem="uf6-hA-yWa" secondAttribute="bottom" id="6Wu-7i-heP"/>
+                            <constraint firstItem="iC0-ME-4PM" firstAttribute="top" secondItem="8da-mG-ySs" secondAttribute="bottom" constant="35" id="75f-Lf-a5h"/>
+                            <constraint firstItem="F2e-1a-LtX" firstAttribute="bottom" secondItem="jep-et-bdQ" secondAttribute="bottom" constant="1" id="FH3-VL-zNZ"/>
+                            <constraint firstItem="uf6-hA-yWa" firstAttribute="top" secondItem="8da-mG-ySs" secondAttribute="bottom" id="HgT-fE-yae"/>
+                            <constraint firstItem="jep-et-bdQ" firstAttribute="leading" secondItem="F2e-1a-LtX" secondAttribute="leading" id="Qab-j4-v6s"/>
+                            <constraint firstItem="8da-mG-ySs" firstAttribute="top" secondItem="F2e-1a-LtX" secondAttribute="top" id="efu-fY-efb"/>
+                            <constraint firstItem="F2e-1a-LtX" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ack-pC-crY" secondAttribute="trailing" id="g1L-Vc-Fv3"/>
+                            <constraint firstItem="uf6-hA-yWa" firstAttribute="leading" secondItem="F2e-1a-LtX" secondAttribute="leading" id="g5p-tA-xKP"/>
+                            <constraint firstItem="8da-mG-ySs" firstAttribute="trailing" secondItem="F2e-1a-LtX" secondAttribute="trailing" id="gHH-2n-iTV"/>
+                            <constraint firstItem="jep-et-bdQ" firstAttribute="top" secondItem="ack-pC-crY" secondAttribute="bottom" constant="50" id="iNo-fx-ca4"/>
+                            <constraint firstItem="8da-mG-ySs" firstAttribute="leading" secondItem="F2e-1a-LtX" secondAttribute="leading" id="lIG-Ve-cbO"/>
+                            <constraint firstItem="F2e-1a-LtX" firstAttribute="trailing" secondItem="uf6-hA-yWa" secondAttribute="trailing" id="nwO-pe-t9O"/>
+                            <constraint firstItem="F2e-1a-LtX" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="iC0-ME-4PM" secondAttribute="trailing" id="tcU-vJ-81O"/>
+                            <constraint firstItem="iC0-ME-4PM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="F2e-1a-LtX" secondAttribute="leading" id="uAr-mL-tyK"/>
+                            <constraint firstItem="jep-et-bdQ" firstAttribute="centerX" secondItem="uf6-hA-yWa" secondAttribute="centerX" id="ud0-Jb-tqD"/>
+                            <constraint firstItem="ack-pC-crY" firstAttribute="centerX" secondItem="F2e-1a-LtX" secondAttribute="centerX" id="v08-x6-46A"/>
+                            <constraint firstItem="ack-pC-crY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="F2e-1a-LtX" secondAttribute="leading" id="w4T-Ca-HQB"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="F2e-1a-LtX"/>
                     </view>
+                    <connections>
+                        <outlet property="cameraButton" destination="P5j-Ds-PnC" id="h5C-Yd-2wH"/>
+                        <outlet property="cancelButton" destination="Exg-9D-fCu" id="ho4-w0-l4I"/>
+                        <outlet property="imagePickerView" destination="uf6-hA-yWa" id="hHA-Iy-fZu"/>
+                        <outlet property="navbar" destination="8da-mG-ySs" id="PFX-QM-00W"/>
+                        <outlet property="shareButton" destination="VFS-sE-2Hr" id="Jg6-2T-KyV"/>
+                        <outlet property="textFieldBotton" destination="ack-pC-crY" id="XsF-7v-3VC"/>
+                        <outlet property="textFieldTop" destination="iC0-ME-4PM" id="oPd-Q4-MBK"/>
+                        <outlet property="toolbar" destination="jep-et-bdQ" id="lB0-hj-EX7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.875" y="133.75"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.116327367" green="0.026884866649999999" blue="0.2540053934" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
